--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = dianaensias
 version = 0.0.2
-author = Kirwa Takadi
-author_email = me@kirwako.com
+author = Safae Hmaidi Imran Baali Yousef Ellamai Nouhaila Barkouk Salma Echbabi Mohamhed Belhoucha
+author_email = student@ensias.com
 description = diana algorithme for ensias
 long_description = file: README.md
 long_description_content_type = text/markdown
