--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = dianaensias
 version = 0.0.2
-author = Safae Hmaidi Imran Baali Yousef Ellamai Nouhaila Barkouk Salma Echbabi Mohamhed Belhoucha
+author = Safae Hmaidi Imran Baali Yousef Ellamai Nouhaila Barkouk Salma Echbabi Mohamed Belhoucha
 author_email = student@ensias.com
 description = diana algorithme for ensias
 long_description = file: README.md
